--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 # Path: requirements.txt
-numpy
-pandas
-scikit-learn
-joblib
+numpy==2.0.2
+pandas==2.2.3
+scikit-learn==1.6.1
+joblib==1.4.2
 matplotlib
-seaborn
-pymongo
-fastapi
-uvicorn
-jinja2
-evidently
-python-multipart
-python-dotenv
-from-root
-dill
+seaborn==0.13.2
+pymongo==4.11.3
+fastapi==0.115.12
+uvicorn==0.34.0
+jinja2==3.1.6
+evidently==0.7.3
+python-multipart==0.0.20
+python-dotenv==1.1.0
+from-root==1.3.0
+dill==0.3.9
+neuro-mf==0.0.5
